components/layout.module.scss
.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100vh;
  position: relative;
  overflow: hidden;

  .headimg {
    //filter: contrast(70%);
    filter: brightness(0.6) contrast(1.1) saturate(1.2) hue-rotate(10deg);
    position: absolute;
    z-index: 0;
    width: 100%;
    height: 134%;
    inset: 0;
    top: -34%;
  }
  .mainTitle {
    // font-size: clamp(30vw, 30vw, 146px);
    font-family: HardbopUltraBold;
    // font-size: 146px;
    line-height: 0.8;
    // padding: 0.1 0;
    bottom: 4%;
    left: 0%;
    padding-left: 3vw;
    // -ms-transform: translateY(-50%);
    // transform: translateY(-50%);
    position: absolute;
    z-index: 1;

    .linesViewport {
      transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1) 1.15s;
      overflow: hidden;
      line-height: 0.8;
      height: calc(1em * 0.8);
    }

    .linesTrack {
      display: inline-block;
      animation: cycleText 8s cubic-bezier(0.23, 1, 0.32, 1) infinite;
    }

    .linesTrack p {
      height: calc(1em * 0.8);
      margin: 0;
      padding: 0;
    }

    .centerIcon {
      position: absolute;
      left: 60%;
      top: 60%;
      transform: translate(-50%, -50%);
      pointer-events: none;
      z-index: 2;
    }
    // letter-spacing: -2.62px;
    // font-family: HelveticaRegular;
    // line-height: clamp(40px, 10vw, 123px);
    // max-width: 1250px;
    // margin: 0 auto;
    // font-style: normal;
    // text-transform: uppercase;
    // text-align: center;
    // font-weight: lighter;
    // // opacity: 0;
    // // overflow: hidden;

    // span {
    //   font-family: Migra;
    //   text-transform: capitalize;
    // }
    // div:last-child {
    //   width: calc(100% + 16px);
    // }
  }
  @media screen and (min-width: 640px) {
    .mainTitle {
      line-height: 121px
    }
  }
  @keyframes cycleText {
    0%, 20% {
        transform: translateY(0); /* Show "OUR PITCH" */
    }
    20% {
      transform: translateY(calc(-1em * 0.8)); /* "OUR GAME" */
    }
    40% {
      transform: translateY(calc(-2em * 0.8)); /* "OUR CRAFT" */
    }
    60% {
      transform: translateY(calc(-3em * 0.8)); /* "BOARD" */
    }
    80%, 100% {
        transform: translateY(calc(-4em * 0.8)); /* Show "OUR PITCH" again (the duplicate) */
    }
}

  .currentInfoContainer {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;
    font-weight: lighter;
    // font-size: 13.7px;
    text-transform: uppercase;
    font-family: roboto;

    // > div {
    //   position: absolute;
    //   bottom: 0;
    //   width: max-content;
    // }
  }
}

.tiltedContainer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: var(--tilted-container-height); /* Utilisation de la variable */
  display: flex;
}

.tiltedDiv1, .tiltedDiv2, .tiltedDiv3 {
  flex: 1;
  height: var(--tilted-div-height); /* Utilisation de la variable */
  background-color: black;
}

.tiltedDiv1 {
  clip-path: polygon(0 100%, 100% 100%, 100% 0);
}

.tiltedDiv2 {
  clip-path: polygon(0 100%, 100% 100%, 100% 0);
}

.tiltedDiv3 {
  clip-path: polygon(0 100%, 100% 100%, 100% 0);
}

.imgBottom {
  height: var(--img-bottom-height); /* Calcul automatique */
  width: 100vw;
  position: absolute;
  bottom: 0%;
  background: black;
}
#main {
  flex: 1;
}

// @media screen and (max-width: 1440px) {
//   .header {
//     .currentInfoContainer {
//       bottom: 25%;
//       left: 50%;
//       top: auto;
//       transform: translateX(-50%);
//       height: 18px;
//       width: 357px;

//       > div {
//         position: relative;
//         transform: none;
//         margin: 0 auto;
//       }
//     }
//   }
// }

